peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/Branch_Stamper__mdt.object-meta.xml
<CustomObject>
    <label>Branch Stamper</label>
    <pluralLabel>Branch Stampers</pluralLabel>
</CustomObject>