peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/Branch_Result__c.field-meta.xml
<CustomField>
    <fullName>Branch_Result__c</fullName>
    <label>Branch Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>