peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/First_Asset_Titled__c.field-meta.xml
<CustomField>
    <fullName>First_Asset_Titled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Asset Titled?</label>
    <type>Checkbox</type>
</CustomField>