peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/First_Dealer_Number_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Dealer_Number_Value__c</fullName>
    <label>First Dealer Number Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>