peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/Is_Medical__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Medical?</label>
    <type>Checkbox</type>
</CustomField>