peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/No_Brokers__c.field-meta.xml
<CustomField>
    <fullName>No_Brokers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Brokers?</label>
    <type>Checkbox</type>
</CustomField>