peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/No_Franchisors__c.field-meta.xml
<CustomField>
    <fullName>No_Franchisors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Franchisors</label>
    <type>Checkbox</type>
</CustomField>