peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/Yes_Brokers__c.field-meta.xml
<CustomField>
    <fullName>Yes_Brokers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes Brokers</label>
    <type>Checkbox</type>
</CustomField>