peac_dev/force-app/main/default/objects/Branch_Stamper__mdt/fields/Yes_Franchisors__c.field-meta.xml
<CustomField>
    <fullName>Yes_Franchisors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes Franchisors</label>
    <type>Checkbox</type>
</CustomField>